public/style.css
:root {
  --color--white: #fbfbfb;
  --color--black: #222222;

  --color--gray-100: #ccc;
  --color--gray-200: #aca7a7;
  --color--gray-300: #222;

  --color--primary-500: rgb(232, 123, 7);

  --typography--font-stack: sans-serif;
}

* {
  margin: 0;
  padding: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

ul[class] {
  list-style: none;
  padding: 0;
}

/**
 * TYPOGRAPHY
 */
html {
  font-size: 10px;
}

body {
  font-family: var(--typography--font-stack);
  font-size: 1.7rem;
  font-weight: 300;
}

p {
  line-height: 1.6;
}

p + p {
  margin-top: 1.5rem;
}

ul {
  padding-left: 3rem;
}

/**
 * FORMS
 */
input[type="text"],
input[type="email"] {
  border: 1px solid var(--color--gray-200);
  border-radius: 0.4rem;
  padding: 1rem 1.75rem;
  font-size: 1.5rem;
  line-height: 1;
}

/**
 * BASE
 */
body {
  background-color: var(--color--white);
  color: var(--color--black);
}

/**
 * GRID
 */
.site {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

.site-content {
  flex: 1;
}

.wrapper {
  margin: 0 auto;
  padding: 0 2%;
}

.width-content {
  max-width: 800px;
}

.width-wide {
  max-width: 1200px;
}

/**
 * COMPONENT: Button
 */
.btn,
button,
input[type="submit"] {
  background-color: var(--color--primary-500);
  color: var(--color--white);
  border: 1px solid transparent;
  border-radius: 0.4rem;
  padding: 1rem 1.75rem;
}

/**
 * HEADER
 */
.site-header {
  background-color: var(--color--primary-500);
  color: var(--color--white);
}

/**
 * FOOTER
 */
.site-footer {
  background-color: var(--color--gray-300);
  color: var(--color--white);
}

.copyright {
  text-align: center;
  font-size: 1.2rem;
  color: var(--color--gray-200);
}

